--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
                                                 </div>
                                             </div>
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i>11:00 AM, January 25</p>
+                                                <p><i class="zmdi zmdi-time"></i>11:15 AM, January 25</p>
                                                 <p><i class="zmdi zmdi-map"></i> Seminar Hall, Lecture Hall Complex C, NITK</p>
                                             </div>
                                         </div>
@@ -776,7 +776,7 @@
                                                 </div>
                                             </div>
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i>11:45 AM, January 25</p>
+                                                <p><i class="zmdi zmdi-time"></i>12:00 PM, January 25</p>
                                                 <p><i class="zmdi zmdi-map"></i> Seminar Hall, Lecture Hall Complex C, NITK</p>
                                             </div>
                                         </div>
@@ -784,14 +784,30 @@
                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
                                             <div class="single-schedule-tumb-info d-flex align-items-center">
                                                 <div class="single-schedule-tumb">
-                                                    <img src="img/bg-img/101.png" alt="">
+                                                    <img src="img/bg-img/105.png" alt="">
                                                 </div>
                                                 <div class="single-schedule-info">
-                                                    <h6>Lunch</h6>
+                                                    <h6>Being a Technologist in financial services</h6>
+                                                    <p>Bharat Raizada</p>
                                                 </div>
                                             </div>
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i>12:30 PM, January 25</p>
+                                                <p><i class="zmdi zmdi-time"></i>12:45 PM, January 25</p>
+                                                <p><i class="zmdi zmdi-map"></i> Lecture Hall Complex C, NITK</p>
+                                            </div>
+                                        </div>
+                                        <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
+                                            <div class="single-schedule-tumb-info d-flex align-items-center">
+                                                <div class="single-schedule-tumb">
+                                                    <img src="img/bg-img/105.png" alt="">
+                                                </div>
+                                                <div class="single-schedule-info">
+                                                    <h6>Intelligent Things - How AI will be all around us</h6>
+                                                    <p>Ashutosh Verma</p>
+                                                </div>
+                                            </div>
+                                            <div class="schedule-time-place">
+                                                <p><i class="zmdi zmdi-time"></i>1:05 PM, January 25</p>
                                                 <p><i class="zmdi zmdi-map"></i> Lecture Hall Complex C, NITK</p>
                                             </div>
                                         </div>
@@ -814,10 +830,10 @@
                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
                                             <div class="single-schedule-tumb-info d-flex align-items-center">
                                                 <div class="single-schedule-tumb">
-                                                    <img src="img/bg-img/106.png" alt="">
+                                                    <img src="img/bg-img/101.png" alt="">
                                                 </div>
                                                 <div class="single-schedule-info">
-                                                    <h6>Brainstorming and Team Building</h6>
+                                                    <h6>Lunch</h6>
                                                 </div>
                                             </div>
                                             <div class="schedule-time-place">
@@ -836,7 +852,7 @@
                                                 </div>
                                             </div>
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i> 5:00 PM, January 25</p>
+                                                <p><i class="zmdi zmdi-time"></i> 2:30 PM, January 25</p>
                                                 <p><i class="zmdi zmdi-map"></i> Lecture Hall Complex C, NITK</p>
                                             </div>
                                         </div>
