--- a/index.html
+++ b/index.html
@@ -589,100 +589,100 @@
                     </div>
                 </div>
 
-        </div>
+            </div>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="300ms">
-                        <h4 style="color:navy">Speakers &amp; Judges</h4>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="section-heading text-center wow fadeInUp" data-wow-delay="300ms">
+                            <h4 style="color:navy">Speakers &amp; Judges</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                            <div class="speaker-single-thumb">
+                                <img style="height: 320px;" src="img/speakers-img/wells-fargo-speaker.jpg" alt="">
+                            </div>
+                            <div class="social-info">
+                                <a href="https://www.linkedin.com/in/avermaa"><i class="zmdi zmdi-linkedin"></i></a>
+                            </div>
+                            <div class="speaker-info">
+                                <h5>Ashutosh Verma</h5>
+                                <p style="color: gold;">Analytics Manager at Wells Fargo</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                            <div class="speaker-single-thumb">
+                                <img style="height: 320px;" src="img/speakers-img/fold.jpg" alt="">
+                            </div>
+                            <div class="social-info">
+                                <a href="https://www.linkedin.com/in/shaktigoap"><i class="zmdi zmdi-linkedin"></i></a>
+                                <a href="https://twitter.com/shaktigoap"><i class="zmdi zmdi-twitter"></i></a>
+                            </div>
+                            <div class="speaker-info">
+                                <h5>Shakti Goap</h5>
+                                <p style="color: gold;">Founder at Fold and Devfolio</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                            <div class="speaker-single-thumb">
+                                <img style="height: 320px;" src="img/speakers-img/adobe.jpg" alt="">
+                            </div>
+                            <div class="social-info">
+                                <a href="https://in.linkedin.com/in/sharad-srivastava-93463b12"><i class="zmdi zmdi-linkedin"></i></a>
+                            </div>
+                            <div class="speaker-info">
+                                <h5>Sharad Srivastava</h5>
+                                <p style="color: gold;">Senior Engineering Manager at Adobe Systems</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                            <div class="speaker-single-thumb">
+                                <img style="height: 320px;" src="img/speakers-img/elastic.png" alt="">
+                            </div>
+                            <div class="social-info">
+                                <a href="https://www.linkedin.com/in/aravindputrevu/"><i class="zmdi zmdi-linkedin"></i></a>
+                                <a href="https://github.com/aravindputrevu"><i class="zmdi zmdi-github"></i></a>
+                                <a href="https://twitter.com/aravindputrevu"><i class="zmdi zmdi-twitter"></i></a>
+                                <a href="https://www.facebook.com/aravind.putrevu"><i class="zmdi zmdi-facebook"></i></a>
+                            </div>
+                            <div class="speaker-info">
+                                <h5>Aravind Putrevu</h5>
+                                <p style="color: gold;">Senior Developer Advocate at Elastic</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                            <div class="speaker-single-thumb">
+                                <img style="height: 320px;" src="img/speakers-img/SaurabhGupta.jpg" alt="">
+                            </div>
+                            <div class="social-info">
+                                <a href="https://in.linkedin.com/in/saurabh-gupta-a3262319"><i class="zmdi zmdi-linkedin"></i></a>
+                                <a href="https://twitter.com/devopsfollower"><i class="zmdi zmdi-twitter"></i></a>
+                            </div>
+                            <div class="speaker-info">
+                                <h5>Saurabh Gupta</h5>
+                                <p style="color: gold;">Senior Developer Advocate at DigitalOcean</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-
-            <div class="row">
-
-                <div class="col-12 col-md-6 col-lg-3">
-                    <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
-                        <div class="speaker-single-thumb">
-                            <img style="height: 320px;" src="img/speakers-img/wells-fargo-speaker.jpg" alt="">
-                        </div>
-                        <div class="social-info">
-                            <a href="https://www.linkedin.com/in/avermaa"><i class="zmdi zmdi-linkedin"></i></a>
-                        </div>
-                        <div class="speaker-info">
-                            <h5>Ashutosh Verma</h5>
-                            <p style="color: gold;">Analytics Manager at Wells Fargo</p>
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="col-12 col-md-6 col-lg-3">
-                    <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
-                        <div class="speaker-single-thumb">
-                            <img style="height: 320px;" src="img/speakers-img/fold.jpg" alt="">
-                        </div>
-                        <div class="social-info">
-                            <a href="https://www.linkedin.com/in/shaktigoap"><i class="zmdi zmdi-linkedin"></i></a>
-                            <a href="https://twitter.com/shaktigoap"><i class="zmdi zmdi-twitter"></i></a>
-                        </div>
-                        <div class="speaker-info">
-                            <h5>Shakti Goap</h5>
-                            <p style="color: gold;">Founder at Fold and Devfolio</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-md-6 col-lg-3">
-                    <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
-                        <div class="speaker-single-thumb">
-                            <img style="height: 320px;" src="img/speakers-img/adobe.jpg" alt="">
-                        </div>
-                        <div class="social-info">
-                            <a href="https://in.linkedin.com/in/sharad-srivastava-93463b12"><i class="zmdi zmdi-linkedin"></i></a>
-                        </div>
-                        <div class="speaker-info">
-                            <h5>Sharad Srivastava</h5>
-                            <p style="color: gold;">Senior Engineering Manager at Adobe Systems</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-md-6 col-lg-3">
-                    <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
-                        <div class="speaker-single-thumb">
-                            <img style="height: 320px;" src="img/speakers-img/elastic.png" alt="">
-                        </div>
-                        <div class="social-info">
-                            <a href="https://www.linkedin.com/in/aravindputrevu/"><i class="zmdi zmdi-linkedin"></i></a>
-                            <a href="https://github.com/aravindputrevu"><i class="zmdi zmdi-github"></i></a>
-                            <a href="https://twitter.com/aravindputrevu"><i class="zmdi zmdi-twitter"></i></a>
-                            <a href="https://www.facebook.com/aravind.putrevu"><i class="zmdi zmdi-facebook"></i></a>
-                        </div>
-                        <div class="speaker-info">
-                            <h5>Aravind Putrevu</h5>
-                            <p style="color: gold;">Senior Developer Advocate at Elastic</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-md-6 col-lg-3">
-                    <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
-                        <div class="speaker-single-thumb">
-                            <img style="height: 320px;" src="img/speakers-img/SaurabhGupta.jpg" alt="">
-                        </div>
-                        <div class="social-info">
-                            <a href="https://in.linkedin.com/in/saurabh-gupta-a3262319"><i class="zmdi zmdi-linkedin"></i></a>
-                            <a href="https://twitter.com/devopsfollower"><i class="zmdi zmdi-twitter"></i></a>
-                        </div>
-                        <div class="speaker-info">
-                            <h5>Saurabh Gupta</h5>
-                            <p style="color: gold;">Senior Developer Advocate at DigitalOcean</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </section>
 
     <!-- Our Speaker and Judges Area End -->
@@ -1593,7 +1593,7 @@
                                 Copyright &copy;
                                 <script>
                                     document.write(new Date().getFullYear());
-                                </script> All rights reserved | Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://hackverse.nitk.ac.in" target="_blank">HackVerse Team</a> &amp; <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                                </script> All rights reserved | Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://hackverse.nitk.ac.in/team" target="_blank">HackVerse Team</a> &amp; <a href="https://colorlib.com" target="_blank">Colorlib</a>
                             </p>
                         </div>
                     </div>
