--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                         </div>
                     </div>
 
-                    <div class="col-12 col-md-6 col-lg-3">
+<!--                     <div class="col-12 col-md-6 col-lg-3">
                         <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                             <div class="speaker-single-thumb">
                                 <img style="height: 320px;" src="img/speakers-img/fold.jpg" alt="">
@@ -632,7 +632,7 @@
                             </div>
                         </div>
                     </div>
-
+ -->
                     <div class="col-12 col-md-6 col-lg-3">
                         <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                             <div class="speaker-single-thumb">
