--- a/index.html
+++ b/index.html
@@ -920,7 +920,37 @@
                                                 </div>
                                             </div>
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i>8:00 AM, January 26</p>
+                                                <p><i class="zmdi zmdi-time"></i> 8:00 AM, January 26</p>
+                                                <p><i class="zmdi zmdi-map"></i> Lecture Hall Complex C, NITK</p>
+                                            </div>
+                                        </div>
+
+                                        <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
+                                            <div class="single-schedule-tumb-info d-flex align-items-center">
+                                                <div class="single-schedule-tumb">
+                                                    <img src="img/bg-img/109.jpeg" alt="">
+                                                </div>
+                                                <div class="single-schedule-info">
+                                                    <h6>71st Republic day celebrations</h6>
+                                                </div>
+                                            </div>
+                                            <div class="schedule-time-place">
+                                                <p><i class="zmdi zmdi-time"></i> 8:00 AM, January 26</p>
+                                                <p><i class="zmdi zmdi-map"></i> Sports Complex, NITK</p>
+                                            </div>
+                                        </div>
+
+                                        <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
+                                            <div class="single-schedule-tumb-info d-flex align-items-center">
+                                                <div class="single-schedule-tumb">
+                                                    <img src="img/bg-img/110.png" alt="">
+                                                </div>
+                                                <div class="single-schedule-info">
+                                                    <h6>Checkpoint</h6>
+                                                </div>
+                                            </div>
+                                            <div class="schedule-time-place">
+                                                <p><i class="zmdi zmdi-time"></i> 10:00 AM, January 26</p>
                                                 <p><i class="zmdi zmdi-map"></i> Lecture Hall Complex C, NITK</p>
                                             </div>
                                         </div>
@@ -935,7 +965,7 @@
                                                 </div>
                                             </div>
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i>12:30 PM, January 26</p>
+                                                <p><i class="zmdi zmdi-time"></i> 12:30 PM, January 26</p>
                                                 <p><i class="zmdi zmdi-map"></i> Lecture Hall Complex C, NITK</p>
                                             </div>
                                         </div>
@@ -950,7 +980,7 @@
                                                 </div>
                                             </div>
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i> 5:00 PM, January 26</p>
+                                                <p><i class="zmdi zmdi-time"></i> 4:00 PM, January 26</p>
                                                 <p><i class="zmdi zmdi-map"></i> Lecture Hall Complex C, NITK</p>
                                             </div>
                                         </div>
@@ -965,7 +995,7 @@
                                                 </div>
                                             </div>
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i> 5:15 PM, January 26</p>
+                                                <p><i class="zmdi zmdi-time"></i> 4:00 PM, January 26</p>
                                                 <p><i class="zmdi zmdi-map"></i> Lecture Hall Complex C, NITK</p>
                                             </div>
                                         </div>
@@ -973,15 +1003,30 @@
                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
                                             <div class="single-schedule-tumb-info d-flex align-items-center">
                                                 <div class="single-schedule-tumb">
-                                                    <img src="img/bg-img/104.png" alt="">
+                                                    <img src="img/bg-img/105.png" alt="">
                                                 </div>
                                                 <div class="single-schedule-info">
-                                                    <h6>High Tea</h6>
+                                                    <h6>Presentation</h6>
                                                 </div>
                                             </div>
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i>6:00 PM, January 26</p>
+                                                <p><i class="zmdi zmdi-time"></i>6:30 PM, January 26</p>
                                                 <p><i class="zmdi zmdi-map"></i> Lecture Hall Complex C, NITK</p>
+                                            </div>
+                                        </div>
+
+                                        <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
+                                            <div class="single-schedule-tumb-info d-flex align-items-center">
+                                                <div class="single-schedule-tumb">
+                                                    <img src="img/bg-img/109.jpeg" alt="">
+                                                </div>
+                                                <div class="single-schedule-info">
+                                                    <h6>Closing Ceremony</h6>
+                                                </div>
+                                            </div>
+                                            <div class="schedule-time-place">
+                                                <p><i class="zmdi zmdi-time"></i>7:30 PM, January 26</p>
+                                                <p><i class="zmdi zmdi-map"></i> Silver Jubilee Auditorium, NITK</p>
                                             </div>
                                         </div>
 
@@ -991,28 +1036,15 @@
                                                     <img src="img/bg-img/102.png" alt="">
                                                 </div>
                                                 <div class="single-schedule-info">
-                                                    <h6>Dinner</h6>
+                                                    <h6>Networking Dinner</h6>
                                                 </div>
                                             </div>
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i>9:00 PM, January 26</p>
+                                                <p><i class="zmdi zmdi-time"></i>8:00 PM, January 26</p>
                                                 <p><i class="zmdi zmdi-map"></i> Lecture Hall Complex C, NITK</p>
                                             </div>
                                         </div>
 
-                                        <!--                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
-                                            <div class="single-schedule-tumb-info d-flex align-items-center">
-                                                <div class="single-schedule-tumb">
-                                                    <img src="img/bg-img/111.png" alt="">
-                                                </div>
-                                                <div class="single-schedule-info">
-                                                    <h6>Cultural Program</h6>
-                                                </div>
-                                            </div>
-                                            <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-map"></i> Silver Jubilee Auditorium, NITK</p>
-                                            </div>
-                                        </div> -->
                                     </div>
                                 </div>
                             </div>
