--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
-                            <img style="height: 320px;" src="img/speakers-img/wells-fargo.png" alt="">
+                            <img style="height: 320px;" src="img/speakers-img/wells-fargo.png" alt="Bharat Raizada">
                         </div>
                         <div class="social-info">
                             <a href="https://www.linkedin.com/in/bharat-raizada-4a09062"><i class="zmdi zmdi-linkedin"></i></a>
@@ -577,7 +577,7 @@
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
-                            <img style="height: 320px;" src="img/speakers-img/DK.jpeg" alt="">
+                            <img style="height: 320px;" src="img/speakers-img/DK.jpeg" alt="Divakar Kamath">
                         </div>
                         <div class="social-info">
                             <a href="https://twitter.com/divakarkamathb"><i class="zmdi zmdi-twitter"></i></a>
@@ -605,7 +605,7 @@
                     <div class="col-12 col-md-6 col-lg-3">
                         <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                             <div class="speaker-single-thumb">
-                                <img style="height: 320px;" src="img/speakers-img/wells-fargo-speaker.jpg" alt="">
+                                <img style="height: 320px;" src="img/speakers-img/wells-fargo-speaker.jpg" alt="Ashutosh Verma">
                             </div>
                             <div class="social-info">
                                 <a href="https://www.linkedin.com/in/avermaa"><i class="zmdi zmdi-linkedin"></i></a>
@@ -636,7 +636,7 @@
                     <div class="col-12 col-md-6 col-lg-3">
                         <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                             <div class="speaker-single-thumb">
-                                <img style="height: 320px;" src="img/speakers-img/adobe.jpg" alt="">
+                                <img style="height: 320px;" src="img/speakers-img/adobe.jpg" alt="Sharad Srivastava">
                             </div>
                             <div class="social-info">
                                 <a href="https://in.linkedin.com/in/sharad-srivastava-93463b12"><i class="zmdi zmdi-linkedin"></i></a>
@@ -651,7 +651,7 @@
                     <div class="col-12 col-md-6 col-lg-3">
                         <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                             <div class="speaker-single-thumb">
-                                <img style="height: 320px;" src="img/speakers-img/elastic.png" alt="">
+                                <img style="height: 320px;" src="img/speakers-img/elastic.png" alt="Aravind Putrevu">
                             </div>
                             <div class="social-info">
                                 <a href="https://www.linkedin.com/in/aravindputrevu/"><i class="zmdi zmdi-linkedin"></i></a>
@@ -669,7 +669,7 @@
                     <div class="col-12 col-md-6 col-lg-3">
                         <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                             <div class="speaker-single-thumb">
-                                <img style="height: 320px;" src="img/speakers-img/SaurabhGupta.jpg" alt="">
+                                <img style="height: 320px;" src="img/speakers-img/SaurabhGupta.jpg" alt="Saurabh Gupta">
                             </div>
                             <div class="social-info">
                                 <a href="https://in.linkedin.com/in/saurabh-gupta-a3262319"><i class="zmdi zmdi-linkedin"></i></a>
@@ -678,6 +678,22 @@
                             <div class="speaker-info">
                                 <h5>Saurabh Gupta</h5>
                                 <p style="color: gold;">Senior Developer Advocate at DigitalOcean</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                            <div class="speaker-single-thumb">
+                                <img style="height: 320px;" src="img/speakers-img/nirbhik.jpg" alt="Nirbhik Jangid">
+                            </div>
+                            <div class="social-info">
+                                <a href="https://in.linkedin.com/in/nirbhikjangid"><i class="zmdi zmdi-linkedin"></i></a>
+                                <a href="https://twitter.com/nirbhikjangid"><i class="zmdi zmdi-twitter"></i></a>
+                            </div>
+                            <div class="speaker-info">
+                                <h5>Nirbhik Jangid</h5>
+                                <p style="color: gold;">Growth Hacker & Community Manager at Matic</p>
                             </div>
                         </div>
                     </div>
