--- a/index.html
+++ b/index.html
@@ -1181,9 +1181,12 @@
                         <div id="memsis" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="http://memsisrental.com/"><img src="/img/sponsors-img/memsis.jpeg" alt="Memsis"></a>
                         </div>
-                        <!-- <div id="bounce" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                        <div id="bounce" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://metrobikes.in/"><img src="/img/sponsors-img/bounce.png" alt="Bounce"></a>
-                        </div> -->
+                        </div>
+                        <div id="fold" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://fold.money/"><img src="/img/sponsors-img/fold.png" alt="Fold Money"></a>
+                        </div>
                     </div>
                     <div id="desktop">
                         <p style="display:flex;justify-content: center;">Interested in sponsoring HackVerse? Shoot us an email at <a style="color:#9293bc; font-weight: normal; text-indent: 0.2em;" href="mailto:hackverse@nitk.edu.in" target="_blank">hackverse@nitk.edu.in</a></p>
