--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 <body>
 
     <!-- Preloader -->
-    <div id="preloader">
+    <!-- <div id="preloader">
         <div class="loader"></div>
-    </div>
+    </div> -->
     <!-- /Preloader -->
 
     <!-- Header Area Start -->
