Added Stats Section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
     <link rel="stylesheet" href="css/swiper.css">
     <link rel="stylesheet" href="css/gallaryStyle.css">
 
-
     <script type="application/ld+json">
         {
             "@context": "http://schema.org",
@@ -428,7 +427,7 @@
                 </div>
             </section>
 
-            <!-- Prizes section -->
+            <!-- Prizes and Stats section -->
             <section class="our-ticket-pricing-table-area bg-img bg-gradient-overlay section-padding-100-0 jarallax">
                 <div class="container">
                     <div class="row">
@@ -436,9 +435,58 @@
                             <div class="about-content-text mb-80">
                                 <h3 class="text-center wow fadeInUp" data-wow-delay="300ms"
                                     style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
-                                    Prizes</h3>
+                                    Stats & Prizes</h3>
                             </div>
                         </div>
+                    </div>
+                    <div class= "row stats">
+                        <div class="col-12 col-lg-3">
+                            <div class=" text-center mb-100 wow fadeInUp statDisplay"
+                            data-wow-delay="300ms"
+                            style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
+                                <i class="fas fa-users fa-4x"></i>
+                                <div class = "milestone-number">
+                                    <span class="number-holder">2416</span>
+                                </div>
+                                <div class = "milestone-desc">Total Registrations</div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-3">
+                            <div class=" text-center mb-100 wow fadeInUp statDisplay"
+                            data-wow-delay="300ms"
+                            style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
+                                <i class="fas fa-user-secret fa-4x"></i>
+                                <div class = "milestone-number" >
+                                    <span class="number-holder">180</span>
+                                    <span class="number-suffix">+</span>
+                                </div>
+                                <div class = "milestone-desc">Hackers Hosted</div>
+                            </div>
+                        </div>   
+                        <div class="col-12 col-lg-3">
+                            <div class=" text-center mb-100 wow fadeInUp statDisplay"
+                            data-wow-delay="300ms"
+                            style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
+                                <i class="fas fa-university fa-4x"></i>
+                                <div class = "milestone-number" >
+                                    <span class="number-holder">80</span>
+                                    <span class="number-suffix">+</span>
+                                </div>
+                                <div class = "milestone-desc">Engineering Institutes</div>
+                            </div>
+                        </div>   
+                        <div class="col-12 col-lg-3">
+                            <div class=" text-center mb-100 wow fadeInUp statDisplay"
+                            data-wow-delay="300ms"
+                            style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
+                                <i class="fas fa-globe fa-4x"></i>
+                                <div class = "milestone-number" >
+                                    <span class="number-holder">30</span>
+                                    <span class="number-suffix">+</span>
+                                </div>
+                                <div class = "milestone-desc">Companies</div>
+                            </div>
+                        </div>    
                     </div>
                     <div class="row">
                         <div class="col-12 col-lg-4">
@@ -2039,11 +2087,12 @@
     <script src="js/aos.js"></script>
 
     <script src="js/gallaryMain.js"></script>
-
+    <script src="js/stats.js"></script>
     <!-- Active -->
     <script src="/js/default-assets/active.js"></script>
+    <script src="https://kit.fontawesome.com/c74fa6cfb0.js" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/940386bfc9.js"></script>
-    <script>
+    <script>    
         var mobile = document.getElementById('mobile');
         var desktop = document.getElementById('desktop');
         var mobile_logo = document.getElementById('logo-mob');
