--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
 
     <!-- Minimized here -->
     <section class="our-speaker-area bg-img bg-gradient-overlay section-padding-100-60"
-    style="background-image: url(img/bg-img/3.jpg); width: 1510px;margin-left: -200px;">
+    style="background-image: url(img/bg-img/3.jpg);">
     <div class="container">
         <div class="row">
             <div class="col-12">
