--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
     </section>
     <!--TRACKS End-->
 
-    <!-- Our Speakers and Judges Area Start -->
+     <!-- Our Speakers and Judges Area Start -->
 
     <section class="our-speaker-area bg-img bg-gradient-overlay section-padding-100-60"
     style="background-image: url(img/bg-img/3.jpg);">
@@ -423,7 +423,7 @@
             </div>
 
             <div class="row">
-                <div class="col-6 col-md-6 col-lg-3">
+                <div class="col-6 col-md-4 col-lg-3">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
                             <img style="height: 240px;" class="img-circle" src="img/speakers-img/wells-fargo.webp"  onerror="this.onerror=null;this.src='img/speakers-img/wells-fargo.png';" alt="Bharat Raizada">
@@ -440,7 +440,7 @@
                     
                 </div>
 
-                <div class="col-6 col-md-6 col-lg-3">
+                <div class="col-6 col-md-4 col-lg-3">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
                             <img style="height: 240px;" class="img-circle" src="img/speakers-img/DK.webp" onerror="this.onerror=null;this.src='img/speakers-img/DK.jpeg';" alt="Divakar Kamath">
@@ -455,7 +455,7 @@
                     </div>
                 </div>
                 
-                <div class="col-6 col-md-6 col-lg-3">
+                <div class="col-6 col-md-4 col-lg-3">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
                             <img style="height: 240px;" class="img-circle" src="img/speakers-img/wells-fargo-speaker.webp" onerror="this.onerror=null;this.src='img/speakers-img/wells-fargo-speaker.jpg';"
@@ -471,7 +471,7 @@
                     </div>
                 </div>
 
-                <div class="col-6 col-md-6 col-lg-3">
+                <div class="col-6 col-md-4 col-lg-3">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
                             <img style="height: 240px;" class="img-circle" src="img/speakers-img/adobe.webp" onerror="this.onerror=null;this.src='img/speakers-img/adobe.jpg';" alt="Sharad Srivastava">
@@ -486,10 +486,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="row">
-                <div class="col-6 col-md-6 offset-lg-1 col-lg-3">
+                <div class="col-6 col-md-4 offset-lg-1 col-lg-3">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
                             <img style="height: 240px;" class="img-circle" src="img/speakers-img/elastic.webp" onerror="this.onerror=null;this.src='img/speakers-img/elastic.png';" alt="Aravind Putrevu">
@@ -509,7 +507,7 @@
                     </div>
                 </div>
 
-                <div class="col-6 col-md-6 col-lg-3">
+                <div class="col-6 col-md-4 col-lg-3">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
                             <img style="height: 240px;" class="img-circle" src="img/speakers-img/SaurabhGupta.webp" onerror="this.onerror=null;this.src='img/speakers-img/SaurabhGupta.jpg';" alt="Saurabh Gupta">
@@ -526,7 +524,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-md-6 col-lg-3">
+                <div class="col-6 offset-3 col-md-4 offset-md-4 col-lg-3 offset-lg-0 ">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
                             <img style="height: 240px;" class="img-circle" src="img/speakers-img/nirbhik.webp" onerror="this.onerror=null;this.src='img/speakers-img/nirbhik.jpg';" alt="Nirbhik Jangid">
