--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
     </section>
     <!--TRACKS End-->
 
-     <!-- Our Speakers and Judges Area Start -->
+    <!-- Our Speakers and Judges Area Start -->
 
     <section class="our-speaker-area bg-img bg-gradient-overlay section-padding-100-60"
     style="background-image: url(img/bg-img/3.jpg);">
@@ -426,7 +426,7 @@
                 <div class="col-6 col-md-4 col-lg-3">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
-                            <img style="height: 240px;" class="img-circle" src="img/speakers-img/wells-fargo.webp"  onerror="this.onerror=null;this.src='img/speakers-img/wells-fargo.png';" alt="Bharat Raizada">
+                            <img style="height: 240px;" class="img-fluid rounded-circle" src="img/speakers-img/wells-fargo.webp"  onerror="this.onerror=null;this.src='img/speakers-img/wells-fargo.png';" alt="Bharat Raizada">
                         </div>
                         <div class="social-info">
                             <a href="https://www.linkedin.com/in/bharat-raizada-4a09062"><i
@@ -443,7 +443,7 @@
                 <div class="col-6 col-md-4 col-lg-3">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
-                            <img style="height: 240px;" class="img-circle" src="img/speakers-img/DK.webp" onerror="this.onerror=null;this.src='img/speakers-img/DK.jpeg';" alt="Divakar Kamath">
+                            <img style="height: 240px;" class="img-fluid rounded-circle" src="img/speakers-img/DK.webp" onerror="this.onerror=null;this.src='img/speakers-img/DK.jpeg';" alt="Divakar Kamath">
                         </div>
                         <div class="social-info">
                             <a href="https://twitter.com/divakarkamathb"><i class="zmdi zmdi-twitter"></i></a>
@@ -458,7 +458,7 @@
                 <div class="col-6 col-md-4 col-lg-3">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
-                            <img style="height: 240px;" class="img-circle" src="img/speakers-img/wells-fargo-speaker.webp" onerror="this.onerror=null;this.src='img/speakers-img/wells-fargo-speaker.jpg';"
+                            <img style="height: 240px;" class="img-fluid rounded-circle" src="img/speakers-img/wells-fargo-speaker.webp" onerror="this.onerror=null;this.src='img/speakers-img/wells-fargo-speaker.jpg';"
                                 alt="Ashutosh Verma">
                         </div>
                         <div class="social-info">
@@ -474,7 +474,7 @@
                 <div class="col-6 col-md-4 col-lg-3">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
-                            <img style="height: 240px;" class="img-circle" src="img/speakers-img/adobe.webp" onerror="this.onerror=null;this.src='img/speakers-img/adobe.jpg';" alt="Sharad Srivastava">
+                            <img style="height: 240px;" class="img-fluid rounded-circle" src="img/speakers-img/adobe_sqr.webp" onerror="this.onerror=null;this.src='img/speakers-img/adobe_sqr.jpg';" alt="Sharad Srivastava">
                         </div>
                         <div class="social-info">
                             <a href="https://in.linkedin.com/in/sharad-srivastava-93463b12"><i
@@ -490,7 +490,7 @@
                 <div class="col-6 col-md-4 offset-lg-1 col-lg-3">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
-                            <img style="height: 240px;" class="img-circle" src="img/speakers-img/elastic.webp" onerror="this.onerror=null;this.src='img/speakers-img/elastic.png';" alt="Aravind Putrevu">
+                            <img style="height: 240px;" class="img-fluid rounded-circle" src="img/speakers-img/elastic_sqr.webp" onerror="this.onerror=null;this.src='img/speakers-img/elastic_sqr.png';" alt="Aravind Putrevu">
                         </div>
                         <div class="social-info">
                             <a href="https://www.linkedin.com/in/aravindputrevu/"><i
@@ -510,7 +510,7 @@
                 <div class="col-6 col-md-4 col-lg-3">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
-                            <img style="height: 240px;" class="img-circle" src="img/speakers-img/SaurabhGupta.webp" onerror="this.onerror=null;this.src='img/speakers-img/SaurabhGupta.jpg';" alt="Saurabh Gupta">
+                            <img style="height: 240px;" class="img-fluid rounded-circle" src="img/speakers-img/SaurabhGupta.webp" onerror="this.onerror=null;this.src='img/speakers-img/SaurabhGupta.jpg';" alt="Saurabh Gupta">
                         </div>
                         <div class="social-info">
                             <a href="https://in.linkedin.com/in/saurabh-gupta-a3262319"><i
@@ -527,7 +527,7 @@
                 <div class="col-6 offset-3 col-md-4 offset-md-4 col-lg-3 offset-lg-0 ">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
-                            <img style="height: 240px;" class="img-circle" src="img/speakers-img/nirbhik.webp" onerror="this.onerror=null;this.src='img/speakers-img/nirbhik.jpg';" alt="Nirbhik Jangid">
+                            <img style="height: 240px;" class="img-fluid rounded-circle" src="img/speakers-img/nirbhik.webp" onerror="this.onerror=null;this.src='img/speakers-img/nirbhik.jpg';" alt="Nirbhik Jangid">
                         </div>
                         <div class="social-info">
                             <a href="https://in.linkedin.com/in/nirbhikjangid"><i
