--- a/index.html
+++ b/index.html
@@ -1547,7 +1547,8 @@
     <!-- Popper -->
     <script src="/js/popper.min.js"></script>
     <!-- Bootstrap -->
-    <script src="/js/bootstrap.min.js"></script>
+    <!--script src="/js/bootstrap.min.js"></script>-->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- All Plugins -->
     <script src="/js/confer.bundle.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
