--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 </div>
             </div>
 
-            
+           <!-- 
             <div class="row align-items-center">
                 <div class="col-12 col-md-12">
                     <div class="about-content-text mb-80">
@@ -250,9 +250,7 @@
                         </div>
                         <div class="single-blog-text text-center">
                             <h4>Learn &amp; Build</h4>
-
                         </div>
-
                     </div>
                 </div>
 
@@ -263,9 +261,7 @@
                         </div>
                         <div class="single-blog-text text-center">
                             <h4>Workshops &amp; Talks</h4>
-
                         </div>
-
                     </div>
                 </div>
 
@@ -276,9 +272,7 @@
                         </div>
                         <div class="single-blog-text text-center">
                             <h4>Network &amp; Network</h4>
-
                         </div>
-
                     </div>
                 </div>
 
@@ -289,9 +283,7 @@
                         </div>
                         <div class="single-blog-text text-center">
                             <h4>Schwags &amp; Prizes</h4>
-
                         </div>
-
                     </div>
                 </div>
 
@@ -302,9 +294,7 @@
                         </div>
                         <div class="single-blog-text text-center">
                             <h4>Travel Allowance</h4>
-
                         </div>
-
                     </div>
                 </div>
 
@@ -315,13 +305,10 @@
                         </div>
                         <div class="single-blog-text text-center">
                             <h4>Beach</h4>
-
                         </div>
-
                     </div>
                 </div>
-
-            </div>
+            </div>--!>
         </div>  
     </section>
 
